--- a/CS654-main/lab2.X/Readme
+++ b/CS654-main/lab2.X/Readme
@@ -1,5 +1,4 @@
-The purpose of this lab is to introduce you to interrupts and Timers on the dsPIC33F board. You
-must write a program that does all of the following.
+The purpose of this lab was to introduce interrupts and Timers on the dsPIC33F board. We wrote a program that does all of the following.
 1. Toggle LED4 inside your main program loop on every iteration. 
 2. Toggle LED1 every 5 millisecond using Timer2’s interrupt. 
 3. Toggle LED2 every 1 second using Timer1’s interrupt.
